--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -3,11 +3,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 23%;
 }
 
 .about p {
     color: #aaa;
-    margin-bottom: 2em;
+    text-align: justify;
 }
 
 .about a {
